--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
       - name: Install dependencies
-        run: pip install -r requirement.txt
+        run: pip install -r requirements.txt
       - name: Run Test
         run: pytest
 
