--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -19,7 +19,9 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: Run Test
+      - name: Install pytest
+        run: pip install pytest
+      - name: Run test
         run: pytest
 
 
