--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+     REVIEW_DB_URL: ${{ secrets.REVIEW_DB_URL }}
     steps:
       - name: Start
         uses: actions/checkout@v3
@@ -19,7 +21,6 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install dependencies
         run: pip install -r requirements.txt
-        env:  ${{ secrets.REVIEW_DB_URL }}
       - name: Install pytest
         run: pip install pytest
       - name: Run test
