--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -21,10 +21,31 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+  test:
+    name: Test app
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: start test
+        uses: actions/checkout@v3
       - name: Install pytest
         run: pip install pytest
       - name: Run test
         run: pytest
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs:
+      - test
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_API_KEY }}
 
 
 
