--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ pydantic==2.3.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.3
 pytest==7.4.0
-python-dotenv==1.0.0
+python-dotenv
 requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==2.0.20
