--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -3,20 +3,20 @@ name: reviewAPI CI/CD
 on:
   push:
     branches:
-      - 'main'
+      - "main"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-     REVIEW_DB_URL: ${{ secrets.REVIEW_DB_URL }}
+      REVIEW_DB_URL: ${{ secrets.REVIEW_DB_URL }}
     steps:
       - name: Start
         uses: actions/checkout@v3
       - name: Install Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
       - name: Install dependencies
@@ -35,7 +35,7 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
       - name: Install dependencies
@@ -48,12 +48,11 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs:
-      - test
+    # needs:
+    #   - test
     steps:
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
-
